# wled-tools

./: .gitignore  README.md  dome.json  pyproject.toml
settings/: cfg.base.json  cfg.led.json  cfg.virtual.json  dome.json  presets.json  state.tri-part.json
src/pyddp/: display.py  dome.py  server.py  viewer.py
src/wled_tools/: api_client.py  display.py  dome.py  mapping.py  preset.py  protocol.py  segment.py  segments_mapping.py  server.py  state.py  utils.py  viewer.py
